--- a/manifest.yml
+++ b/manifest.yml
@@ -2,7 +2,7 @@
 applications:
 - disk_quota: 1024M
   buildpack: nodejs_buildpack
-  host: hellowatson
+  host: helloNodeHJGM
   name: helloWatsonToneDemo
   command: node app.js
   path: .
